fix: Fixed text align

--- a/src/internal/components/cartesian-chart/styles.scss
+++ b/src/internal/components/cartesian-chart/styles.scss
@@ -41,7 +41,6 @@
 }
 
 .ticks__text__group {
-  width: max-content;
   text-align: center;
 }
 
